<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hello"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pojo.acti.HelloActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="31dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_hello_claim" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_hello_illustration" />

        <Button
            android:id="@+id/buttonAutho"
            style="@style/TextForAuthoButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/gradient_autho_button"
            android:onClick="onAutho"
            android:text="@string/hello_autho"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="14dp"
            android:textStyle="normal"></Button>

        <Button
            android:id="@+id/buttonReg"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:background="#FFFFFF"
            android:onClick="onReg"
            android:text="@string/hello_reg"
            android:textAllCaps="false"
            android:textColor="#323643"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/textLicence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="onLicense"
            android:text="@string/text_license"
            android:textAlignment="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>