<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="dashboard.DashboardActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true" android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp">

        <include layout="@layout/sensor_layout"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_black_12"/>

        <com.healbe.healbe_example_andorid.views.DashboardView
            android:id="@+id/energy_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_balance_dash"
            app:round_color="@color/secondary_purple"
            app:title_string="@string/energy_header"
            app:value_visible="false"
            app:text_visible="false"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_black_12"/>

        <com.healbe.healbe_example_andorid.views.DashboardView
            android:id="@+id/water_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:round_color="@color/main_water_blue"
            app:icon="@drawable/ic_water_dash"
            app:title_string="@string/hydration_header"
            app:value_visible="false"
            app:text_visible="false"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_black_12"/>


        <com.healbe.healbe_example_andorid.views.DashboardView
            android:id="@+id/heart_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:round_color="@color/main_heart_red"
            app:icon="@drawable/ic_heart_rate_dash"
            app:title_string="@string/pulse_header"
            app:text_visible="false"
            app:value_visible="false"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_black_12"/>


        <com.healbe.healbe_example_andorid.views.DashboardView
            android:id="@+id/stress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:round_color="@color/secondary_stress_orange"
            app:icon="@drawable/ic_stress_dash"
            app:title_string="@string/stress_header"
            app:value_visible="false"
            app:text_visible="false"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_black_12"/>


        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBasicParam"
            android:text="Json" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitClick"
            android:text="SUBMIT" />

        <Button
            android:id="@+id/testButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickTestButton"
            android:text="TestButton" />

        <TextView
            android:id="@+id/textResponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>