<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".enter.LoginFragment"
    android:animateLayoutChanges="true">

    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/searching_devices_nearby"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/make_sure"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/searching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/searching_devices_nearby"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress" />


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <ImageView
        android:id="@+id/error_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_error"
        app:layout_constraintTop_toTopOf="@+id/progress"
        app:layout_constraintBottom_toBottomOf="@+id/progress"
        app:layout_constraintLeft_toLeftOf="@+id/progress"
        app:layout_constraintRight_toRightOf="@+id/progress"/>


    <ImageView
        android:id="@+id/placeholder"
        app:layout_constraintTop_toBottomOf="@id/searching"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:maxWidth="328dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_connect"
        app:layout_constraintHorizontal_bias="0.495" />

    <View
        android:id="@+id/divider"
        app:layout_constraintBottom_toTopOf="@id/list"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_black_12" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        tools:listitem="@layout/search_list_string"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logout_button"
        app:layout_constraintTop_toBottomOf="@+id/searching"
        app:layout_constraintBottom_toBottomOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/retry"
        app:layout_constraintBottom_toTopOf="@id/logout_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        style="@style/MainButtonBackgroundless"
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>